# LocalZip

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  lib.rs  main.rs  rar.rs  split.rs  tray.rs
src-tauri/tests/: fixtures.rs
src-tauri/tests/fixtures/: README.md  rar4_compactado.rar
src/components/: CreateModal.tsx  EmptyState.tsx  EntryTable.tsx  OpsPanel.tsx  PasswordModal.tsx  SettingsModal.tsx  Toasts.tsx  TopBar.tsx
src/lib/: backend.ts  i18n.ts  types.ts  zpath.ts
src/lib/__tests__/: zpath.test.ts
src/state/: store.ts  ui.ts
