[package]
name = "localzip"
version = "0.6.0"
description = "LocalZip — compactador de arquivos 100% offline da suíte Local"
authors = ["Taylor"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Anon5T4R/LocalZip"

[lib]
# O sufixo `_lib` evita conflito entre o nome da lib e o do binário no Windows
# (https://github.com/rust-lang/cargo/issues/8519).
name = "localzip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon + image-png: fechar a janela minimiza pra bandeja e a extração
# longa segue viva em vez de morrer com a janela.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# zip com AES (criar E extrair com senha) + variantes tar. 7z e RAR (extração)
# ficam pra v0.3 (API do sevenz-rust/unrar validada na máquina).
zip = { version = "2", features = ["aes-crypto", "deflate", "bzip2", "zstd", "time"] }
tar = "0.4"
flate2 = "1"
# tar.xz / tar.bz2 / tar.zst (descompressão).
xz2 = "0.1"
bzip2 = "0.5"
zstd = "0.13"
sevenz-rust2 = "0.21.3"
rars = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
# Autostart opcional (opt-in em Configurações): abrir com o sistema direto na
# bandeja, pronto pra receber um arquivo compactado.
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
# Lê a chave Run na mão pra decidir se o autostart precisa ser reimposto: o
# `is_enabled()` do plugin só checa se a entrada existe, sem comparar o caminho
# (então não enxerga uma entrada obsoleta), e não distingue "apagada" de
# "desligada pelo Gerenciador de Tarefas" — que pedem respostas opostas.
# Mesma versão que o auto-launch já usa: não entra crate nova na árvore.
winreg = "0.55"
